--- a/www/static/index.html
+++ b/www/static/index.html
@@ -9,6 +9,8 @@
     <link  href="https://fancytree.googlecode.com/hg/src/skin-win7/ui.fancytree.css" rel="stylesheet" type="text/css"/>
     <script src="https://fancytree.googlecode.com/hg/src/jquery.fancytree.js" type="text/javascript"></script>
 -->
+    <script src="static/jquery.jqote2.js"></script>
+    <script src="static/jquery.dataTables.js"></script>
     <script type="text/javascript" src="static/report.js"></script>
     <script>
       $(document).ready(function() {
@@ -26,8 +28,6 @@
            $report.hijax(ui.panel); 
          } 
         });
-        $('li', $report.tabs()).bind('focusin.example', $report.fetchAndRender);
-
 
 /*
         // close icon: removing the tab on click
