--- a/www/static/index.html
+++ b/www/static/index.html
@@ -48,12 +48,15 @@
     <script type="text/html" id="template">
         <%
     var date = new Date(this.date*1000);
+    var id = this.ident?(this.ident+'-'+this.subident):'';
         %>
       <![CDATA[
         <a class="popup">
-          <code class="<%= this.severity %>" level="<%= this.level %>">(<%= $report.openLog.ident(this.severity) %><time> <%= date.toLocaleTimeString() %></time>) <%= $report.openLog.msg(this.msg) %></code>
+          <code class="<%= this.severity %>" level="<%= this.level %>">(<%= $report.openLog.justify(this.severity) %><time> <%= date.toLocaleTimeString() %></time><ident><%= $report.openLog.justify(id, 10) %></ident>) <%= $report.openLog.msg(this.msg) %></code>
           <span title="x">
-            <%= date.toGMTString() %>
+            <% if (this.ident) out += '<p class="id">'+id+'</p>'; %>
+            <p class="date"><%= date.toGMTString() %></p>
+            <% if (this.filename) out += '<p class="file">'+this.filename+':'+this.line+'</p>'; %>
           </span>
         </a>
       ]]>
