--- a/www/static/index.html
+++ b/www/static/index.html
@@ -27,22 +27,20 @@
          } 
         });
 
+        var tabIndex = function(it) {
+          return $(it).parent('li').prevAll('li').length;
+        }
 
         // close icon: removing the tab on click
         $report.tabs().delegate("span.ui-icon-close", "click", function() {
-  	  var index = $("li", $(this)).index($(this).parent());
-    	  $report.tabs("remove", index);
+    	  $report.tabs("remove", tabIndex(this));
           $report.tabs("refresh");
         });
 
-/*
-
-        $(document).on("click", $("span.ui-icon-refresh", $report.tabs), function() {
-    	  var index = $("li", $(this)).index($(this).parent());
-    	  $report.tabs("load", index);
+        $report.tabs().delegate("span.ui-icon-refresh", "click", function() {
+    	  $report.tabs("load", tabIndex(this));
         });
 
-*/
       });
     </script>
     <script type="text/html" id="template">
