--- a/www/static/index.html
+++ b/www/static/index.html
@@ -27,7 +27,7 @@
           ajaxOptions : {
             cache      : false,
             dataType   : 'html', // it will be html in the end
-            dataFilter : function(data) {return (new $report.testJSON(data)).render()},
+            dataFilter : function(data) {return (new $report.testJSON($.parseJSON(data))).render()},
             error : function(xhr, status, index, anchor) {
               console.log(xhr, status, index);
             }
