--- a/www/static/index.html
+++ b/www/static/index.html
@@ -41,6 +41,18 @@
         </a>
       ]]>
     </script>
+    <script type="text/html" id="menu">
+      <ul> 
+        <li><span></span><a href="#">View Ident</a></li>
+        <li><a href="#">View Time</a>
+          <ul>
+            <li><span></span><a href="#">Hide</a></li>
+            <li><span></span><a href="#">Relative</a></li>
+            <li><span></span><a href="#">Absolute</a></li>
+          </ul>
+        </li>
+      </ul>
+   </script>
  </head>
   <body>
     <div id="report">
