firefox, opera differences

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -57,9 +57,9 @@
   <body>
     <div id="report">
       <ul>
-        <li><a href="index/all"><span>All Tests</span></a><span class="ui-icon ui-icon-refresh"></span></li>
-        <li><a href="index/rgr"><span>Regressions</span></a><span class="ui-icon ui-icon-refresh"></span></li>
-        <li><a href="index/sngl"><span>Singletons</span></a><span class="ui-icon ui-icon-refresh"></span></li>
+        <li><a href="index/all"><span>All Tests</span></a><a href="#" class="icon"><span class="ui-icon ui-icon-refresh"></span></a></li>
+        <li><a href="index/rgr"><span>Regressions</span></a><a href="#" class="icon"><span class="ui-icon ui-icon-refresh"></span></a></li>
+        <li><a href="index/sngl"><span>Singletons</span></a><a href="#" class="icon"><span class="ui-icon ui-icon-refresh"></span></a></li>
       </ul>
     </div>
   </body>
