--- a/www/static/index.html
+++ b/www/static/index.html
@@ -5,8 +5,8 @@
     <link  href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.js"></script>
-    <link  href="http://dynatree.googlecode.com/svn/trunk/src/skin/ui.dynatree.css" rel="stylesheet" type="text/css"/>
-    <script src="http://dynatree.googlecode.com/svn/trunk/src/jquery.dynatree.js" type="text/javascript"></script>
+    <link  href="static/ui.dynatree.css" rel="stylesheet" type="text/css"/>
+    <script src="static/jquery.dynatree.js" type="text/javascript"></script>
     <script src="https://raw.github.com/aefxx/jQote2/master/jquery.jqote2.js"></script>
     <script src="http://www.datatables.net/download/build/jquery.dataTables.js"></script>
     <script type="text/javascript" src="static/report.js"></script>
