--- a/www/static/index.html
+++ b/www/static/index.html
@@ -8,7 +8,7 @@
     <link  href="static/ui.dynatree.css" rel="stylesheet" type="text/css"/>
     <script src="static/jquery.dynatree.js" type="text/javascript"></script>
     <script src="https://raw.github.com/aefxx/jQote2/master/jquery.jqote2.js"></script>
-    <script src="http://www.datatables.net/download/build/jquery.dataTables.js"></script>
+    <script src="static/jquery.dataTables.js"></script>
     <script type="text/javascript" src="static/report.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
