--- a/www/static/index.html
+++ b/www/static/index.html
@@ -10,6 +10,7 @@
     <script src="static/jquery.jqote2.js"></script>
     <script src="static/jquery.dataTables.js"></script>
     <script type="text/javascript" src="static/report.js"></script>
+    <script type="text/javascript" src="static/coverage.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
         $report.tabs({
