sort fit of tabs into window

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -25,6 +25,7 @@
               console.log(xhr, status, index);
             }
          },
+         panelTemplate: '<div class="tab"></div>'
         });
         $report.formatTabs($report.tabs());
       });
