add matrix view to 2 dimensional coverpoints

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -81,7 +81,7 @@
         <li id="hide-illegal"><a href="#"><span class="ui-icon ui-icon-check"></span>Hide Illegals</a></li>
         <li id="hide-both"><a href="#"><span class="ui-icon ui-icon-check"></span>Hide Both</a></li>
         <li>&nbsp;</li>
-        <li id="new-tab"><a href="#"><span class="ui-icon"></span>Hide in New Tab</a></li>
+        <li id="matrix"><a href="#"><span class="ui-icon ui-icon-check"></span>Matrix</a></li>
       </ul>
    </script>
  </head>
