add tooltips to menu choices

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -60,28 +60,28 @@
     </script>
     <script type="text/html" id="cvg-point-menu">
       <ul class="popup">
-        <li id="select"><a href="#"><span class="ui-icon ui-icon-check"></span>Select</a></li>
-        <li id="unselect"><a href="#"><span class="ui-icon ui-icon-check"></span>Unselect</a></li>
-        <li id="hide"><a href="#"><span class="ui-icon"></span>Hide</a></li>
-        <li id="hide-only"><a href="#"><span class="ui-icon"></span>Hide Only</a></li>
-        <li id="hide-others"><a href="#"><span class="ui-icon"></span>Hide Others</a></li>
+        <li id="select"><a href="#" title="Select this column"><span class="ui-icon ui-icon-check"></span>Select</a></li>
+        <li id="unselect"><a href="#" title="Unselect this column"><span class="ui-icon ui-icon-check"></span>Unselect</a></li>
+        <li id="hide"><a href="#" title="Hide selected columns"><span class="ui-icon"></span>Hide</a></li>
+        <li id="hide-only"><a href="#" title="Hide only this column"><span class="ui-icon"></span>Hide Only</a></li>
+        <li id="hide-others"><a href="#" title="Hide all other columns"><span class="ui-icon"></span>Hide Others</a></li>
         <li>&nbsp;</li>
-        <li id="select-all"><a href="#"><span class="ui-icon"></span>Select All</a></li>
-        <li id="select-others"><a href="#"><span class="ui-icon"></span>Select Others</a></li>
-        <li id="unselect-all"><a href="#"><span class="ui-icon"></span>Unselect All</a></li>
-        <li id="invert"><a href="#"><span class="ui-icon"></span>Invert Selection</a></li>
+        <li id="select-all"><a href="#" title="Select all columns"><span class="ui-icon"></span>Select All</a></li>
+        <li id="select-others"><a href="#" title="Select other columns"><span class="ui-icon"></span>Select Others</a></li>
+        <li id="unselect-all"><a href="#" title="Unselect all columns"><span class="ui-icon"></span>Unselect All</a></li>
+        <li id="invert"><a href="#" title="Invert column selection"><span class="ui-icon"></span>Invert Selection</a></li>
         <li>&nbsp;</li>
-        <li id="hide-selected"><a href="#"><span class="ui-icon"></span>Hide Selected</a></li>
-        <li id="unhide-all"><a href="#"><span class="ui-icon"></span>Unhide All</a></li>
+        <li id="hide-selected"><a href="#" title="Hide selected columns"><span class="ui-icon"></span>Hide Selected</a></li>
+        <li id="unhide-all"><a href="#" title="Reset - Show all columns"><span class="ui-icon"></span>Unhide All</a></li>
         <li>&nbsp;</li>
-        <li id="sort-up"><a href="#"><span class="ui-icon"></span>Sort Ascending</a></li>
-        <li id="sort-down"><a href="#"><span class="ui-icon"></span>Sort Descending</a></li>
+        <li id="sort-up"><a href="#" title="Sort column by row values ascending"><span class="ui-icon"></span>Sort Ascending</a></li>
+        <li id="sort-down"><a href="#" title="Sort column by row values descending"><span class="ui-icon"></span>Sort Descending</a></li>
         <li>&nbsp;</li>
-        <li id="hide-dontcare"><a href="#"><span class="ui-icon ui-icon-check"></span>Hide Don't Cares</a></li>
-        <li id="hide-illegal"><a href="#"><span class="ui-icon ui-icon-check"></span>Hide Illegals</a></li>
-        <li id="hide-both"><a href="#"><span class="ui-icon ui-icon-check"></span>Hide Both</a></li>
+        <li id="hide-dontcare"><a href="#" title="Show/hide rows marked don't care"><span class="ui-icon ui-icon-check"></span>Hide Don't Cares</a></li>
+        <li id="hide-illegal"><a href="#" title="Show/hide rows marked illegal"><span class="ui-icon ui-icon-check"></span>Hide Illegals</a></li>
+        <li id="hide-both"><a href="#" title="Show/hide rows marked illegal or don't care"><span class="ui-icon ui-icon-check"></span>Hide Both</a></li>
         <li>&nbsp;</li>
-        <li id="matrix"><a href="#"><span class="ui-icon ui-icon-check"></span>Matrix</a></li>
+        <li id="matrix"><a href="#" title="View 2 axis tables as a matrix"><span class="ui-icon ui-icon-check"></span>Matrix</a></li>
       </ul>
    </script>
  </head>
