hide hit buckets function

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -100,6 +100,7 @@
         <li id="sort-up"><a href="#" title="Sort column by row values ascending"><span class="ui-icon"></span>Sort Ascending</a></li>
         <li id="sort-down"><a href="#" title="Sort column by row values descending"><span class="ui-icon"></span>Sort Descending</a></li>
         <li>&nbsp;</li>
+        <li id="hide-hits"><a href="#" title="Show/hide rows marked as hit"><span class="ui-icon ui-icon-check"></span>Hide Hits</a></li>
         <li id="hide-dontcare"><a href="#" title="Show/hide rows marked don't care"><span class="ui-icon ui-icon-check"></span>Hide Don't Cares</a></li>
         <li id="hide-illegal"><a href="#" title="Show/hide rows marked illegal"><span class="ui-icon ui-icon-check"></span>Hide Illegals</a></li>
         <li id="hide-both"><a href="#" title="Show/hide rows marked illegal or don't care"><span class="ui-icon ui-icon-check"></span>Hide Both</a></li>
