--- a/www/static/index.html
+++ b/www/static/index.html
@@ -40,7 +40,7 @@
         %>
       <![CDATA[
         <a class="popup">
-          <code class="<%= this.severity %>" level="<%= this.level %>">(<%= $report.openLog.justify(this.severity) %><time class="abs"> <%= date.toLocaleTimeString() %></time><time class="rel"> <%= $report.openLog.justify(parseInt(this.seconds).toString(), 6) %></time><ident><%= $report.openLog.justify(id, 10) %></ident>) <%= $report.openLog.msg(this.msg) %></code>
+          <code class="<%= this.severity %>" level="<%= this.level %>" ident="<%= this.ident %>" subident="<%= this.subident %>">(<%= $report.openLog.justify(this.severity) %><time class="abs"> <%= date.toLocaleTimeString() %></time><time class="rel"> <%= $report.openLog.justify(parseInt(this.seconds).toString(), 6) %></time><ident><%= $report.openLog.justify(id, 10) %></ident>) <%= $report.openLog.msg(this.msg) %></code>
           <span title="x">
             <% if (this.ident) out += '<p class="id">'+id+'</p>'; %>
             <p class="date"><%= date.toGMTString() %></p>
