add skew tests; add graph option for single axis coverpoints

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -7,10 +7,13 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.js"></script>
     <link  href="static/ui.dynatree.css" rel="stylesheet" type="text/css"/>
+    <link  href="static/jquery.jqplot.min.css" rel="stylesheet" type="text/css"/>
     <script src="static/jquery.dynatree.js" type="text/javascript"></script>
     <script src="static/jquery.jqote2.js"></script>
     <script src="static/jquery.dataTables.js"></script>
     <script src="static/jquery.tablesorter.js"></script>
+    <script src="static/jquery.jqplot.min.js"></script>
+    <script src="static/jqplot.categoryAxisRenderer.min.js"></script>
     <script type="text/javascript" src="static/report.js"></script>
     <script type="text/javascript" src="static/coverage.js"></script>
     <script type="text/javascript">
@@ -109,6 +112,7 @@
         <li id="hide-both"><a href="#" title="Show/hide rows marked illegal or don't care"><span class="ui-icon ui-icon-check"></span>Hide Both</a></li>
         <li>&nbsp;</li>
         <li id="matrix"><a href="#" title="View 2 axis tables as a matrix"><span class="ui-icon ui-icon-check"></span>Matrix</a></li>
+        <li id="graph"><a href="#" title="View 1 axis tables as a graph"><span class="ui-icon ui-icon-check"></span>Graph</a></li>
       </ul>
    </script>
  </head>
