add heat map functionality to matrix & graph

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -14,6 +14,7 @@
     <script src="static/jquery.tablesorter.js"></script>
     <script src="static/jquery.jqplot.min.js"></script>
     <script src="static/jqplot.categoryAxisRenderer.min.js"></script>
+    <script src="static/jqplot.barRenderer.min.js"></script>
     <script type="text/javascript" src="static/report.js"></script>
     <script type="text/javascript" src="static/coverage.js"></script>
     <script type="text/javascript">
@@ -113,6 +114,8 @@
         <li>&nbsp;</li>
         <li id="matrix"><a href="#" title="View 2 axis tables as a matrix"><span class="ui-icon ui-icon-check"></span>Matrix</a></li>
         <li id="graph"><a href="#" title="View 1 axis tables as a graph"><span class="ui-icon ui-icon-check"></span>Graph</a></li>
+        <li>&nbsp;</li>
+        <li id="heat"><a href="#" title="Annotate hits by test class"><span class="ui-icon ui-icon-check"></span>Heat Map</a></li>
       </ul>
    </script>
  </head>
