--- a/www/static/index.html
+++ b/www/static/index.html
@@ -68,7 +68,7 @@
             <% for (var a1=0; a1<this.x_axis.values.length; a1++) {
                  var bkt=this.buckets[cnt];
             %>
-            <td class="hits <%= $coverage.coverageTable.classFromBucket(bkt) %>" bkt="<%= cnt %>" title="goal = <%= bkt[0] %>"><%= bkt[1] %></td>
+            <td class="hits <%= $coverage.coverageTable.classFromBucket(bkt) %>" bkt="<%= cnt %>" title="goal = <%= bkt[0] %>"><div id="hits"><%= bkt[1] %></div></td>
             <%   cnt+=1;
                } %>
           </tr>
