--- a/www/static/index.html
+++ b/www/static/index.html
@@ -15,6 +15,7 @@
     <script src="static/jquery.jqplot.min.js"></script>
     <script src="static/jqplot.categoryAxisRenderer.min.js"></script>
     <script src="static/jqplot.barRenderer.min.js"></script>
+    <script src="static/underscore.js"></script>
     <script type="text/javascript" src="static/report.js"></script>
     <script type="text/javascript" src="static/coverage.js"></script>
     <script type="text/javascript">
