--- a/www/static/index.html
+++ b/www/static/index.html
@@ -15,6 +15,7 @@
     <script src="static/jquery.jqplot.min.js"></script>
     <script src="static/jqplot.categoryAxisRenderer.min.js"></script>
     <script src="static/jqplot.barRenderer.min.js"></script>
+    <script src="static/jqplot.pieRenderer.min.js"></script>
     <script src="static/underscore.js"></script>
     <script type="text/javascript" src="static/report.js"></script>
     <script type="text/javascript" src="static/coverage.js"></script>
@@ -56,7 +57,7 @@
     </script>
     <script type="text/html" id="matrix-template">
       <div class="table">
-        <table style="width : auto; margin-left : auto; margin-right : auto">
+        <table class="report" style="width : auto; margin-left : auto; margin-right : auto">
           <tr>
             <th class="title" colspan="2" rowspan="2"/>
             <th class="title" colspan="<%= this.x_axis.values.length %>"><%= this.x_axis.name %></th>
